Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,10 +17,14 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.SudokuMasterPremiumOffline">Sudoku Master Premium: Offline</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=it.rortos.realflightsimulator">RFS - Real Flight Simulator</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.WordscapesWordSearchGame">Word Search Game: Offline</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.cooking.love">Cooking Kawaii - cooking games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.cafe.premium">Merge Cafe Premium -Home Decor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.city.premium">Merge City Premium -Home decor</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.spellingmaster">Spelling Master - Quiz Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.triviamaster">Trivia Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fori.slimelegends">Slime Legends - Survivor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.asmg">Pixel Knights VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.livezen.BurningSky.vip">Burning Sky VIP</a></div>
@@ -29,6 +33,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.empire.warriors.td.tower.defense">Empire Warrior: Tower Defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.guardian.war.premium.action.rpg.adventure.games">Guardian War: Ultimate Edition</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=it.rortos.rcs">RCS - Real Combat Simulator</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
