Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,8 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/gunslugs-gog/dp/amzn1.pg.item.f7fe7089-eca7-4ebf-9ab2-45fd60f026ac?g=s&ingress=amzn&ref_=SM_Gunslugs_S01_FGWP_CRWN">Gunslugs</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/big-adventure-trip-to-europe-6-ce-legacy/dp/amzn1.pg.item.5823fdb8-2192-45f8-90af-ef446602b3b6?g=s&ingress=amzn&ref_=SM_BigAdventureTriptoEurope6CE_S01_FGWP_CRWN">Big Adventure: Trip to Europe 6 - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/plateup-epic/dp/amzn1.pg.item.bc7135d4-6239-4a0f-bd01-6b97eae7d9ea?g=s&ingress=amzn&ref_=SM_PlateUp_S01_FGWP_CRWN">PlateUp!</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/dungeons-dragons-krynn-series-gog/dp/amzn1.pg.item.3aefcf19-f3d9-44f6-b5a8-bc92b661726c?g=s&ingress=amzn&ref_=SM_DungeonsDragonsKrynnSeries_S01_FGWP_CRWN">Dungeons & Dragons: Krynn Series</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/dream-tactics-gog/dp/amzn1.pg.item.f4ecdb00-436e-4380-b646-ac1cb04a2d17?g=s&ingress=amzn&ref_=SM_DreamTactics_S01_FGWP_CRWN">Dream Tactics</a></div>
@@ -31,16 +33,11 @@
         <div class="game-item"><a href="https://gaming.amazon.com/claims/halloween-stories-horror-movie-ce-aga/dp/amzn1.pg.item.d78f16f2-76aa-486f-85b3-686e4253b8fb?g=s&ingress=amzn&ref_=SM_HalloweenStoriesHorrorMovieCE_S01_FGWP_CRWN">Halloween Stories: Horror Movie - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/you-will-die-here-tonight-gog/dp/amzn1.pg.item.b2b4fb56-094b-4248-b5df-96078446160b?g=s&ingress=amzn&ref_=SM_YouWillDieHereTonight_S01_FGWP_CRWN">You Will Die Here Tonight</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/werewolf-the-apocalypse-heart-of-the-forest-aga/dp/amzn1.pg.item.f1278372-9b51-424f-bcb2-d1d113c184eb?g=s&ingress=amzn&ref_=SM_WerewolfTheApocalypseHeartoftheForest_S01_FGWP_CRWN">Werewolf: The Apocalypse - Heart of the Forest</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/claims/fallout-3-game-of-the-year-edition-gog/dp/amzn1.pg.item.91c2b55b-e883-4bf7-8815-08f486d7ca35?g=s&ingress=amzn&ref_=SM_Fallout3GameoftheYearEdition_S02_FGWP_CRWN">Fallout 3: Game of the Year Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/xcom-2-gog/dp/amzn1.pg.item.13e05c49-cb97-43b3-82c2-0fab0271a873?g=s&ingress=amzn&ref_=SM_XCOM2_S01_FGWP_CRWN">XCOM 2</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/claims/true-fear-forsaken-souls-part-2-gog/dp/amzn1.pg.item.36a308e9-6a4d-42a0-8f56-120492381506?g=s&ingress=amzn&ref_=SM_TrueFearForsakenSoulsPart2_S01_FGWP_CRWN">True Fear: Forsaken Souls Part 2</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/claims/hellslave-gog/dp/amzn1.pg.item.a7fa52c8-634e-4e62-8c47-426c4a50e657?g=s&ingress=amzn&ref_=SM_Hellslave_S01_FGWP_CRWN">Hellslave</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/claims/lost-and-found-agency-ce-legacy/dp/amzn1.pg.item.c42c9729-d0b8-4462-97bd-f5acd3993964?g=s&ingress=amzn&ref_=SM_LostFoundAgencyCE_S01_FGWP_CRWN">Lost & Found Agency - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/empty-shell-gog/dp/amzn1.pg.item.2cd3ca8d-c84b-46a1-82f4-040a0c4ae02f?g=s&ingress=amzn&ref_=SM_EMPTYSHELL_S01_FGWP_CRWN">EMPTY SHELL</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/tormented-souls-aga/dp/amzn1.pg.item.11649f66-25ae-443a-a472-15f4a6d7180b?g=s&ingress=amzn&ref_=SM_TormentedSouls_S01_FGWP_CRWN">Tormented Souls</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/sid-meiers-civilization-iv-the-complete-edition-gog/dp/amzn1.pg.item.f2368999-6acb-4f03-9f99-b14711e926ee?g=s&ingress=amzn&ref_=SM_SidMeiersCivilizationIVTheCompleteEdition_S01_FGWP_CRWN">Sid Meier's Civilization IV: The Complete Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/residual-gog/dp/amzn1.pg.item.6c1f74ce-2720-4cb5-a5f1-b996c8a7a1fa?g=s&ingress=amzn&ref_=SM_Residual_S01_FGWP_CRWN">Residual</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/claims/heroes-of-loot-2-gog/dp/amzn1.pg.item.960ca075-f916-4013-a454-4d7d4d53a496?g=s&ingress=amzn&ref_=SM_HeroesofLoot2_S01_FGWP_CRWN">Heroes of Loot 2</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
