--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -19,6 +19,7 @@
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=it.rortos.realflightsimulator">RFS - Real Flight Simulator</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.WordscapesWordSearchGame">Word Search Game: Offline</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.EducaGames.DinoTimFull">Dino Tim Full Version for kids</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.cooking.love">Cooking Kawaii - cooking games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.cafe.premium">Merge Cafe Premium -Home Decor</a></div>
