--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -18,6 +18,7 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://store.steampowered.com/app/2184791/HITMAN_3__Makeshift_Pack/?snr=1_7_7_2300_150_1">HITMAN 3 - Makeshift Pack</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/934680/World_of_Warships__Ybari_Pack/?snr=1_7_7_2300_150_1">World of Warships — Yūbari Pack</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
