--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -30,6 +30,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nomadgames.dungeonmaster">Everybody's RPG: Reboot</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.tokyodebunkerpremium">Tokyo Debunker: Urban Legends</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
