--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -18,6 +18,7 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=it.rortos.realflightsimulator">RFS - Real Flight Simulator</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.evertale">Evertale</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.WordscapesWordSearchGame">Word Search Game: Offline</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Didactoons.ABCDinosFull">ABC Dinos Full Version</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.EducaGames.DinoTimFull">Dino Tim Full Version for kids</a></div>
