--- a/game_pages/humble_choice.html
+++ b/game_pages/humble_choice.html
@@ -17,16 +17,15 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">No More Heroes 3</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Total War: WARHAMMER III</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Paleo Pines</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Lost Skies</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Intravenous II</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Beholder Conductor</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Nine Sols</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Streets of Rage 4</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Godlike Burger</a></div>
         <div class="game-item"><a href="https://www.humblebundle.com/membership">Get One Month of IGN Plus</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Another Crab's Treasure</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Synergy</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Lootbane (Nov 20 - Dec 11)</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Spin Hero</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Etrian Odyssey HD</a></div>
-        <div class="game-item"><a href="https://www.humblebundle.com/membership">Pharaoh: A New Era</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Dungeon Tycoon</a></div>
+        <div class="game-item"><a href="https://www.humblebundle.com/membership">Like a Dragon Gaiden: The Man Who Erased His Name</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
