--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/universe-for-sale-05c53e">Universe for Sale</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/the-darkside-detective-02fd5a">The Darkside Detective</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/jackbox-party-pack-4">The Jackbox Party Pack 4</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
