--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/lego-2k-drive-epic/dp/amzn1.pg.item.748f3b5e-8a5c-49be-abd1-d4f2a7e525f4?g=s&ingress=amzn&ref_=SM_LEGO2KDrive_S01_FGWP_CRWN">LEGO 2K Drive</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gylt-aga/dp/amzn1.pg.item.4352c9d6-2081-468b-942e-6eb58e7b3eab?g=s&ingress=amzn&ref_=SM_GYLT_S01_FGWP_CRWN">GYLT</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-one-gog/dp/amzn1.pg.item.40b12069-c053-47a4-b4d4-b0c7cf016c13?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionOne_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection One</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-gog/dp/amzn1.pg.item.f7fe7089-eca7-4ebf-9ab2-45fd60f026ac?g=s&ingress=amzn&ref_=SM_Gunslugs_S01_FGWP_CRWN">Gunslugs</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/big-adventure-trip-to-europe-6-ce-legacy/dp/amzn1.pg.item.5823fdb8-2192-45f8-90af-ef446602b3b6?g=s&ingress=amzn&ref_=SM_BigAdventureTriptoEurope6CE_S01_FGWP_CRWN">Big Adventure: Trip to Europe 6 - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/plateup-epic/dp/amzn1.pg.item.bc7135d4-6239-4a0f-bd01-6b97eae7d9ea?g=s&ingress=amzn&ref_=SM_PlateUp_S01_FGWP_CRWN">PlateUp!</a></div>
