--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,12 +17,11 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.evertale">Evertale</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.DarongStudio.Colorzzle">Colorzzle</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.blacksmithvip">Warriors' Market Mayhem VIP :</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.cookglobalvip">Cooking Quest VIP : Food Wagon</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.dd.mk.vip">[VIP] Missile Dude RPG : idle</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eapublishing.dhsw.paid">Shadow Hunter: Offline Premium</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ninetailgames.roguehearts.paid">Rogue Hearts</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.castle.defender.heroes.premium">Castle Defender Premium</a></div>
