--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -28,6 +28,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.castle.defender.heroes.premium">Castle Defender Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.vtwo.athree.epl.gp">Avalar: Raid of Shadow Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.frog">Frog</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.ninja.stickman.legends.shadow.wars">Stickman Legends Offline Games</a></div>
     </div>
 <footer>
