--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -32,6 +32,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.frog">Frog</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.jumphigh">JumpHigh</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.ninja.stickman.legends.shadow.wars">Stickman Legends Offline Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=studio.manja.hamsterroll">Hamster Roll</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
