Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,8 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-two-gog/dp/amzn1.pg.item.4568db25-39b6-466b-8e2b-e01975fd2c98?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionTwo_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection Two</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/christmas-adventure-candy-storm-legacy/dp/amzn1.pg.item.ca232c9b-7cf7-4717-93b9-23fb1ad3edec?g=s&ingress=amzn&ref_=SM_ChristmasAdventureCandyStorm_S01_FGWP_CRWN">Christmas Adventure: Candy Storm</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/lego-2k-drive-epic/dp/amzn1.pg.item.748f3b5e-8a5c-49be-abd1-d4f2a7e525f4?g=s&ingress=amzn&ref_=SM_LEGO2KDrive_S01_FGWP_CRWN">LEGO 2K Drive</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/gylt-aga/dp/amzn1.pg.item.4352c9d6-2081-468b-942e-6eb58e7b3eab?g=s&ingress=amzn&ref_=SM_GYLT_S01_FGWP_CRWN">GYLT</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-one-gog/dp/amzn1.pg.item.40b12069-c053-47a4-b4d4-b0c7cf016c13?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionOne_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection One</a></div>
