--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/hogwarts-legacy">Hogwarts Legacy</a></div>
         <div class="game-item"><a href="https://store.epicgames.com/en-US/p/fortnite--hollypaw-wrap">Claim</a></div>
         <div class="game-item"><a href="https://store.epicgames.com/en-US/p/fall-guys--fashionably-frosty">Claim</a></div>
         <div class="game-item"><a href="https://store.epicgames.com/en-US/p/rocket-league--tritrim-crimson-forest-green-wheels">Claim</a></div>
