--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -21,6 +21,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ahmad4maylod.cq">Circle Quest: Pofo Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.artifact.uforpgvip">[VIP]UFO DUDE RPG : idle wars</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.devvisiongames.dglandlight.survival">Dead God Land - Light Survival</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.bar10n.find5x">Brain Game - Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x">Find5x</a></div>
@@ -32,7 +33,6 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smalladventuregame.smallredball">Ball Zocos Adventure Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=studio.manja.hamsterroll">Hamster Roll</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
