--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -18,7 +18,7 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://store.steampowered.com/app/582660/Black_Desert/?snr=1_7_7_2300_150_1">Black Desert</a></div>
-        <div class="game-item"><a href="https://store.steampowered.com/app/561770/Just_Ignore_Them/?snr=1_7_7_2300_150_1">Just Ignore Them</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/1200580/One_Gun_Guy/?snr=1_7_7_2300_150_1">One Gun Guy</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
