Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,10 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/bo-path-of-the-teal-lotus-gog/dp/amzn1.pg.item.467b84c8-afa8-432e-a8e9-c69ead91d153?g=s&ingress=amzn&ref_=SM_BoPathoftheTealLotus_S01_FGWP_CRWN">Bō: Path of the Teal Lotus</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-three-gog/dp/amzn1.pg.item.7ddccc6b-b676-4754-97ac-d5b862e5e019?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionThree_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection Three</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-2-gog/dp/amzn1.pg.item.bef0b168-84d5-4915-ba36-5a99cb3c9a4b?g=s&ingress=amzn&ref_=SM_Gunslugs2_S01_FGWP_CRWN">Gunslugs 2</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/ashworld-gog/dp/amzn1.pg.item.6f28092d-5884-4aaf-be02-a13f24a43b83?g=s&ingress=amzn&ref_=SM_Ashworld_S01_FGWP_CRWN">Ashworld</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/lego-2k-drive-epic/dp/amzn1.pg.item.748f3b5e-8a5c-49be-abd1-d4f2a7e525f4?g=s&ingress=amzn&ref_=SM_LEGO2KDrive_S01_FGWP_CRWN">LEGO 2K Drive</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/gylt-aga/dp/amzn1.pg.item.4352c9d6-2081-468b-942e-6eb58e7b3eab?g=s&ingress=amzn&ref_=SM_GYLT_S01_FGWP_CRWN">GYLT</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-one-gog/dp/amzn1.pg.item.40b12069-c053-47a4-b4d4-b0c7cf016c13?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionOne_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection One</a></div>
