Hourly update of free games list

--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -19,6 +19,7 @@
     <div class="game-container">
         <div class="game-item"><a href="https://store.steampowered.com/app/282800/100_Orange_Juice/?snr=1_7_7_2300_150_1">100% Orange Juice</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/2952470/Rat_Quest/?snr=1_7_7_2300_150_1">Rat Quest</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/2068520/Banana_Hell_Mountain_of_Madness/?snr=1_7_7_2300_150_1">Banana Hell: Mountain of Madness</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/1510580/Toy_Tinker_Simulator/?snr=1_7_7_2300_150_1">Toy Tinker Simulator</a></div>
     </div>
 <footer>
