Hourly update of free games list

--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,20 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/eternights-c2fbca">Eternights</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/fortnite--hollypaw-wrap">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/fall-guys--fashionably-frosty">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/rocket-league--tritrim-crimson-forest-green-wheels">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/discord--discord-nitro">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/infinity-nikki-infinity-nikki-epic-extras-bundle-9d715d">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/idle-champions-of-the-forgotten-realms-cozy-dark-urge-party-pack-c58dd9">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/firestone-online-idle-rpg-bfd04b">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/world-of-warships-world-of-warships-%E2%80%94-mikasa-pack-cd82a0">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/asphalt-legends-unite-asphalt-legends-decal-pack-90471b">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/smite-2--gingersnap-bundle">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/disney-speedstorm-monochromatic-pack-racer-jack-skellington-b51d89">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/star-trek-online--epic-starter-pack-bundle">Claim</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/neverwinter-legends-starter-pack-25df3b">Claim</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
