Hourly update of free games list

--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/bloons-td-6-bf95a0">Bloons TD 6</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/styx-master-of-shadows-4d9ab3">Styx: Master of Shadows</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/styx-shards-of-darkness-77c030">Styx: Shards of Darkness</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
