Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,17 +17,16 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.GCenter.universe.invaders.alien.war.attack.V2.Pro">Universe Invader 2: Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.avalar.athree.epl.gp">Avalar: Shadow War Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.devvisiongames.dglandlight.survival">Dead God Land - Light Survival</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.stickman.shadow.knights.fightinggames">Shadow Knight: Ninja Fighting</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Soul Evolve: Epic Fantasy Hero</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.PixelFBladeVIP">Pixel Blade M VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.stickwars2p">Stick Battle Premium: Legends</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush">Words Search - Word Puzzles</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.breakout.r">Break Brick Out</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.non.idle.galaxy.r">Evolution Planet - 14 Billion</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
