Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,8 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/dread-templar-aga/dp/amzn1.pg.item.177b6043-fc6c-4d88-8062-9cf5fe29491d?g=s&ingress=amzn&ref_=SM_DreadTemplar_S01_FGWP_CRWN">Dread Templar</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/tiny-tinas-wonderlands-epic/dp/amzn1.pg.item.bbfc2103-4d24-4c07-9467-c33b858b0346?g=s&ingress=amzn&ref_=SM_TinyTinasWonderlands_S01_FGWP_CRWN">Tiny Tina's Wonderlands</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/technotopia-aga/dp/amzn1.pg.item.a8c36799-e290-4bf6-a594-e21e5ced3a02?g=s&ingress=amzn&ref_=SM_Technotopia_S01_FGWP_CRWN">Technotopia</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/elderborn-gog/dp/amzn1.pg.item.ae624aa2-2ebc-474f-9931-e5137e374b17?g=s&ingress=amzn&ref_=SM_ELDERBORN_S01_FGWP_CRWN">ELDERBORN</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/al-qadim-the-genies-curse-gog/dp/amzn1.pg.item.fd99ecb2-9e65-4ed3-b8b7-66b622b2514f?g=s&ingress=amzn&ref_=SM_AlQadimTheGeniesCurse_S01_FGWP_CRWN">Al-Qadim: The Genie's Curse</a></div>
