Hourly update of free games list

--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/1511950/Magellania/?snr=1_7_7_2300_150_1">Magellania</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/3744480/Arabian_Gulf/?snr=1_7_7_2300_150_1">Arabian Gulf</a></div>
     </div>
 <footer>
