Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,8 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/hexguardian-epic/dp/amzn1.pg.item.c1fbdc33-68e3-4dca-b6ac-3d1ab2c70c13?g=s&ingress=amzn&ref_=SM_Hexguardian_S01_FGWP_CRWN">Hexguardian</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/around-the-world-travel-to-brazil-ce-legacy/dp/amzn1.pg.item.dcd8fad0-8d47-400f-878b-2dfc6df9c3e7?g=s&ingress=amzn&ref_=SM_AroundTheWorldTravelToBrazilCE_S01_FGWP_CRWN">Around The World: Travel To Brazil - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/dread-templar-aga/dp/amzn1.pg.item.177b6043-fc6c-4d88-8062-9cf5fe29491d?g=s&ingress=amzn&ref_=SM_DreadTemplar_S01_FGWP_CRWN">Dread Templar</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/tiny-tinas-wonderlands-epic/dp/amzn1.pg.item.bbfc2103-4d24-4c07-9467-c33b858b0346?g=s&ingress=amzn&ref_=SM_TinyTinasWonderlands_S01_FGWP_CRWN">Tiny Tina's Wonderlands</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/technotopia-aga/dp/amzn1.pg.item.a8c36799-e290-4bf6-a594-e21e5ced3a02?g=s&ingress=amzn&ref_=SM_Technotopia_S01_FGWP_CRWN">Technotopia</a></div>
