--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -18,6 +18,7 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://store.steampowered.com/app/3312020/Lost_in_Anomaly/?snr=1_7_7_2300_150_1">Lost in Anomaly</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/4391750/Halcyon_Days_at_Taoyuan__Galloping_Horse_Pack/?snr=1_7_7_2300_150_1">Halcyon Days at Taoyuan - Galloping Horse Pack</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
