Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,7 +17,18 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.evertale">Evertale</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Gameplete.CardFantasyPremium">TripleFantasy Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.artifact.uforpgvip">[VIP]UFO DUDE RPG : idle wars</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.bw.idle.girl">Idle Girl RPG</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.blacksmithvip">Warriors' Market Mayhem VIP :</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.cookglobalvip">Cooking Quest VIP : Food Wagon</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.dd.mk.vip">[VIP] Missile Dude RPG : idle</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eapublishing.dhsw.paid">Shadow Hunter: Offline Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gamefirst.savetheearth">Eco inc. Save the Earth</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
