Hourly update of free games list

--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,8 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/return-to-ash-dee3ff">Return to Ash</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/stalcraft-x-stalcraft-x-starter-edition-0b06d4">STALCRAFT: X Starter Edition</a></div>
+        <p>No free games available today.</p>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
