--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/ambition-a-minuet-in-power-gog/dp/amzn1.pg.item.00d7bea9-3558-4df4-881a-2f8cb63fb56f?g=s&ingress=amzn&ref_=SM_AmbitionAMinuetinPower_S01_FGWP_CRWN">Ambition: A Minuet in Power</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/captain-blood-gog/dp/amzn1.pg.item.8a0464ae-6ca1-4567-902f-ff1debdb42c8?g=s&ingress=amzn&ref_=SM_CaptainBlood_S01_FGWP_CRWN">Captain Blood</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/meganoid-gog/dp/amzn1.pg.item.593601a3-507c-4235-befd-a62df5d73eed?g=s&ingress=amzn&ref_=SM_Meganoid_S01_FGWP_CRWN">Meganoid</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/hexguardian-epic/dp/amzn1.pg.item.c1fbdc33-68e3-4dca-b6ac-3d1ab2c70c13?g=s&ingress=amzn&ref_=SM_Hexguardian_S01_FGWP_CRWN">Hexguardian</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/around-the-world-travel-to-brazil-ce-legacy/dp/amzn1.pg.item.dcd8fad0-8d47-400f-878b-2dfc6df9c3e7?g=s&ingress=amzn&ref_=SM_AroundTheWorldTravelToBrazilCE_S01_FGWP_CRWN">Around The World: Travel To Brazil - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/dread-templar-aga/dp/amzn1.pg.item.177b6043-fc6c-4d88-8062-9cf5fe29491d?g=s&ingress=amzn&ref_=SM_DreadTemplar_S01_FGWP_CRWN">Dread Templar</a></div>
