Hourly update of free games list

--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.QuanticBit.Flyre">Flyre: Rain Escape</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.minoslab.cashshark">Cash Shark - Earn Money</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.bowmasters.rpg.shooting.monster">Monster Killer Pro - Shooter</a></div>
