Hourly update of free games list

--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/rebel-galaxy-outlaw-gog/dp/amzn1.pg.item.adb93773-6c48-4660-b1ee-006818c6902b?g=s&ingress=amzn&ref_=SM_RebelGalaxyOutlaw_S01_FGWP_CRWN">Rebel Galaxy Outlaw</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/tavern-talk-aga/dp/amzn1.pg.item.7a5cc817-9506-45a0-b9c9-7064d4bd1499?g=s&ingress=amzn&ref_=SM_TavernTalk_S01_FGWP_CRWN">Tavern Talk</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/total-war-attila-epic/dp/amzn1.pg.item.379e9280-72f8-41b5-bc81-ec3a02e4603c?g=s&ingress=amzn&ref_=SM_TotalWarATTILA_S01_FGWP_CRWN">Total War: ATTILA</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/ambition-a-minuet-in-power-gog/dp/amzn1.pg.item.00d7bea9-3558-4df4-881a-2f8cb63fb56f?g=s&ingress=amzn&ref_=SM_AmbitionAMinuetinPower_S01_FGWP_CRWN">Ambition: A Minuet in Power</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/captain-blood-gog/dp/amzn1.pg.item.8a0464ae-6ca1-4567-902f-ff1debdb42c8?g=s&ingress=amzn&ref_=SM_CaptainBlood_S01_FGWP_CRWN">Captain Blood</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/meganoid-gog/dp/amzn1.pg.item.593601a3-507c-4235-befd-a62df5d73eed?g=s&ingress=amzn&ref_=SM_Meganoid_S01_FGWP_CRWN">Meganoid</a></div>
