--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,8 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/boxes-lost-fragments-079041">Boxes: Lost Fragments</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/my-night-job-a416a6">My Night Job</a></div>
+        <p>No free games available today.</p>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
